...
        ticViewModel.setMenuSettings(LoadOrSave.SAVE) // disabling IF condition to load settings only once, when menu is shown
    }

    Card(
        modifier = Modifier
            .widthIn(220.dp, 300.dp)
            .testTag("Menu Window"),
        shape = RoundedCornerShape(30.dp),
        elevation = 0.dp,
        backgroundColor = MaterialTheme.colors.surface
    ) {
        Column(
            modifier = Modifier
...
                    text = "Board size: ${(sizeSliderPosition + 0.5).toInt()}",
                    style = MaterialTheme.typography.h5,
                    color = MaterialTheme.colors.standart,
                    fontSize = 24.nonScaledSp,
                    modifier = Modifier
                        .clearAndSetSemantics {
                            testTag = "Board Size"
                        }
                )
            }
            Slider(
                value = sizeSliderPosition,
                onValueChange = {
...
                    Text(
                        text = "${(winRowSliderPosition + 0.5).toInt()} in a row ",
                        style = MaterialTheme.typography.h5,
                        fontSize = 24.nonScaledSp,
                        modifier = Modifier
                            .clearAndSetSemantics { }
                            .testTag("Win Row"),
                        color = MaterialTheme.colors.standart,
                    )
                    Button(
                        modifier = Modifier
                            .padding(0.dp)
                            .semantics {
...
                        modifier = Modifier
                            .width(((200 / (windowInfo().sliderUpperLimit - 3)) * (winRowSteps + 1) + 20).dp)
                            .semantics {
                                contentDescription =
                                    "${(winRowSliderPosition + 0.5).toInt()} in a row ends the game"
                            }
                            .testTag("winRow Slider"),
                        colors = SliderDefaults.colors(
                            activeTrackColor = MaterialTheme.colors.primary,
                            activeTickColor = MaterialTheme.colors.primary,
                            inactiveTrackColor = MaterialTheme.colors.primaryVariant,
                            inactiveTickColor = MaterialTheme.colors.primaryVariant,
                        )
...
                        ticViewModel.allowChangingFirstMove(true)
                        ticViewModel.setMenuSettings(LoadOrSave.SAVE)
                        ticViewModel.showMenu(false)
                        ticViewModel.makeBotMove()
                    }) {
                    Text(
                        text = "START",
                        modifier = Modifier
                            .clearAndSetSemantics { },
                        style = MaterialTheme.typography.button,
                        fontSize = 20.nonScaledSp,
                    )
                }
...
