...
                painterResource(R.drawable.arrow_back_ios_48px),
                contentDescription = msg,
                modifier = Modifier
                    .size(32.dp)
                    .alpha(alpha)
                    .padding(start = paddingStart)
                    .testTag("Cancel Icon")
            )
        }
    }
}


...
            }
                 */
                .wrapContentSize(Alignment.Center, unbounded = true),
            contentAlignment = Alignment.Center,
        ) {
            val testStringCurrentMove = if (currentMove == CustomCellValues.player1)
                "currentMove: X" else "currentMove: 0"
            if(currentMove == 'X' || currentMove == 'O'){
                Icon(
                    painter = if(currentMove == 'X') painterResource(R.drawable.close_48px) else painterResource(
                        R.drawable.fiber_manual_record_48px),
                    contentDescription = null,
                    modifier = Modifier
...
            )
            Box(modifier = Modifier.heightIn(1.dp, 32.dp)){
                AutoResizedText(
                    text = "$winRow",
                    style = MaterialTheme.typography.body1,
                    modifier = Modifier
                        .testTag("winRow square")
                        .clearAndSetSemantics { }
                        .offset(0.dp, (-0.5).dp),
                    color = MaterialTheme.colors.standart,
                    autoResizeHeightOrWidth = AutoResizeHeightOrWidth.HEIGHT
                )
            }
...
    }

    //------------------------BOT or GAME OVER screen (win / draw)
    if (botOrGameOverScreen.state.visible) {
        Box(modifier = Modifier
            .fillMaxSize()
            .testTag("Game Over Screen")
            .semantics {
                if (botOrGameOverScreen == BotOrGameOverScreen.GAMEOVER) {
                    contentDescription = if (playingVsAI && (currentMove == CustomCellValues.player2)) {
                        when (gameArray[ticViewModel.iOneMoveBefore][ticViewModel.jOneMoveBefore].cellColor) {
                            CellColors.WIN_COLOR -> "Game over, player O won. "
                            CellColors.LOSE_COLOR -> "Game over, player O lost. "
...
