...
                //---------------------------button  <
                CancelButton(
                    ticViewModel = ticViewModel,
                    modifier = Modifier
                        .weight(1f)
                        .fillMaxHeight()
                        .testTag("Cancel Button"),
                    cancelMoveButtonEnabled = ticUiState.cancelMoveButtonEnabled,
                    cancelMove = {
                        ticViewModel.cancelBotWait()
                        ticViewModel.cancelMove()
                                 },
                    playingVsAI = ticUiState.playingVsAI,
...
                //---------------------------button  []
                MenuButton(
                    ticViewModel = ticViewModel,
                    modifier = Modifier
                        .weight(1f)
                        .fillMaxHeight()
                        .testTag("Menu Button"),
                    winRow = ticUiState.winRow,
                    winNotLose = ticUiState.winNotLose,
                    menuButtonShouldBeShaken = ticUiState.menuButtonShouldBeShaken,
                    winOrLoseShouldBeShown = ticUiState.winOrLoseShouldBeShown,
                    orientation = orientation,
                )
...
